--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script src="js/js-custom/map-handler.js"></script>
 
     <!--====================GOOGLE MAPS API CALL====================-->
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD91wVBu5lcSQty3BYUKfGVlpRalES89uA&callback=loadMap"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=key&callback=loadMap"></script>
 
     <title>Solo</title>
 </head>
